reconstructed missing commits in berlios dump from local working copy; need to check one more working copy to get most up-to-date version; compiles; unit tests run without failure; missing code coverage